--- a/ECE226/2023ECE226Note/main.tex
+++ b/ECE226/2023ECE226Note/main.tex
@@ -19,8 +19,8 @@
 \pagestyle{plain}
 
 %%%% Load Format %%%%
-\input{../../Formats/Format.tex}
-\input{../../Formats/Macro.tex}
+\input{../Formats/Format.tex}
+\input{../Formats/Macro.tex}
 \allowdisplaybreaks
 
 %%%% Theorem Style %%%%
