--- a/ECE226/2023ECE226Summer/Intro.tex
+++ b/ECE226/2023ECE226Summer/Intro.tex
@@ -1,6 +1,6 @@
-\documentclass[11pt]{../../formats/RU}
-\input{../../Formats/Macro.tex}
-\graphicspath{{../../Formats/}}
+\documentclass[11pt]{../Formats/RU}
+\input{../Formats/Macro.tex}
+\graphicspath{{../Formats}}
 
 %Theorem style
 \declaretheorem[numbered=no, style=definition]{axiom}
