--- a/ECE525/main.tex
+++ b/ECE525/main.tex
@@ -19,8 +19,8 @@
 \pagestyle{plain}
 
 %%%% Load Format %%%%
-\input{../Formats/format.tex}
-\input{../Formats/Macro.tex}
+\input{Formats/format.tex}
+\input{Formats/Macro.tex}
 % \allowpagebreaks
 %%%% Document Information %%%%
 \title{Project Report}
