--- a/CVX/Formats/Format.tex
+++ b/CVX/Formats/Format.tex
@@ -1,53 +1,53 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Packages to Load
 %% Font Packages
-\RequirePackage[english]{babel} %Multilingual support
-\RequirePackage[utf8]{inputenc} %utf8 support.
-\RequirePackage[T1]{fontenc} %Better Font Encoding for printing
-\RequirePackage{libertinus} %Popular Math Font
-\RequirePackage{microtype} %Better Font Spacing.
-\RequirePackage{lmodern} %Popular Font
+\RequirePackage[english]{babel} %Multilingual Support
+\RequirePackage[utf8]{inputenc} %utf8 Support
+\RequirePackage[T1]{fontenc} %Better Font Encoding for pdflatex
+\RequirePackage{lmodern} %Change both Text and Math Font, Load before libertinus
+\RequirePackage{libertinus} %Ubuntu Times New Roman Text Font
+\RequirePackage{microtype} %Better Font Spacing
 
 %% Math Packages
-\RequirePackage{amsfonts,amsmath,amssymb} %Math Fonts and Symbols
-\RequirePackage{mathtools} %Define math symbols
-\RequirePackage{mleftright}  %Fixes some annoying spacing issues
-\RequirePackage{bm} %Boldface math, load after other math font packages
+\RequirePackage{amssymb} %Math Fonts and Symbols
+\RequirePackage{mathtools} %Define Math Symbols and Load amsmath
+\RequirePackage{mleftright}  %Fixes Some Annoying Spacing Issues
+\RequirePackage{bm} %Boldface Math, Load after Other Math Font Packages
 
 %% Graphics Packages
-\RequirePackage{graphicx} %Graphics backend with key-value arguments
-\RequirePackage[export]{adjustbox} %More arguments for includegraphics
-\RequirePackage[svgnames]{xcolor} %Beamer has this by default
+\RequirePackage{graphicx} %Graphics Backend with key-value Arguments
+\RequirePackage[export]{adjustbox} %More Arguments for includegraphics
+\RequirePackage[svgnames]{xcolor} %Beamer Has This by Default
 \RequirePackage[most]{tcolorbox} %Customized Box
 \RequirePackage{transparent} %Transparent Images
-\RequirePackage{subcaption} %Package to use subfigure
+\RequirePackage{subcaption} %Package to Use Subfigure
 
 %% Table Packages
-\RequirePackage{tabularx} %Including tabular with more space option
-\RequirePackage{multirow} %Package to use multirow in tables
-\RequirePackage{colortbl} %Package to use color in tables
-\RequirePackage{array} %Math and more spacing support in tables
+\RequirePackage{tabularx} %Including Tabular with More Space Option
+\RequirePackage{multirow} %Package to Use Multirow in Tables
+\RequirePackage{colortbl} %Package to Use Color in Tables
+\RequirePackage{array} %Math and More Spacing Support in Tables
 
 %% Theorems etc (also  problems)
 \RequirePackage[shortlabels]{enumitem} %Better List
-\RequirePackage{hyperref} %Beamer has this by default
-\RequirePackage{cleveref} %Must load before amsthm. Conflict With Beamer
+\RequirePackage{hyperref} %Beamer Has This by Default
+\RequirePackage{cleveref} %Must Load before amsthm. Conflict with Beamer
 \RequirePackage{amsthm, thmtools, thm-restate} %Better Theorems
 
 %% Code Packages
-\RequirePackage{listings} %Package to insert code. Better than minted
-\RequirePackage{algorithm} %Package to insert algorithm
-\RequirePackage{algpseudocode} %Package to insert algorithm
+\RequirePackage{listings} %Package to Insert Code. Better than Minted
+\RequirePackage{algorithm} %Package to Insert Algorithm
+\RequirePackage{algpseudocode} %Package to Insert Algorithm
 % \RequirePackage{keyval}
 
 %% Display Packages
-% \RequirePackage[document]{ragged2e} %Replaced by microtype
-\RequirePackage{csquotes} %Package to facilities quotations
-\RequirePackage{multicol} %Package to use multicols
+% \RequirePackage[document]{ragged2e} %Replaced by Microtype
+\RequirePackage{csquotes} %Package to Facilities Quotations
+\RequirePackage{multicol} %Package to Use Multicols
 
 %% Other Packages
-\RequirePackage{xspace} %Package to add space after macros
-\RequirePackage{calc} %Package to calculate in Latex
-\RequirePackage{rotating} %Package to rotate objects
-% \RequirePackage{pgf, tikz} %Package to draw figures.
-\RequirePackage{epstopdf} %Package to convert eps to pdf
+\RequirePackage{xspace} %Package to Add Space after Macros
+\RequirePackage{calc} %Package to Calculate in Latex
+\RequirePackage{rotating} %Package to Rotate Objects
+% \RequirePackage{pgf, tikz} %Package to Draw Figures.
+\RequirePackage{epstopdf} %Package to Convert eps to pdf
 \RequirePackage[backend=biber, style=numeric, sorting=none]{biblatex}
