--- a/CVX/HW2_KailongWang.tex
+++ b/CVX/HW2_KailongWang.tex
@@ -75,5 +75,9 @@
     \end{enumerate}
 \end{problem}
 
+\begin{problem}
+    {Q4}
+    Suppose $K\subset\R^n$ is a nonempty closed convex cone and $y\notin K$. Using the separating hyperplane theorem, show that there exists a vector $a\in \R^n$ such that $\angles*{a,x}\leq 0$ for all $x\in K$ and $\angles*{a,y}>0$ (this is equivalent to showing that there is a hyperplane separating $y$ from $K$ that passes through the origin).
+\end{problem}
 
 \end{document}
